/**
* @file     adr_fileupload.proto
* @author   huangchuan
* @details
* @date     2023-07-24
* @version  V1.0
* @copyright(C),changan,2050
**********************************************************************************
* @attention 信号注释规则：
* ///<name ：[uint],(default,min,max),[max_number],(factor,offset),description 
* ///<信号名称：[单位],(默认值、最小值、最大值),[repeated最大值],（因数，偏移量）,信号描述
* ///<coordinate:  COORDINATE_SYSTEM_VEHICLE_BASE
* ///<数据记录文件上传 --文件通用上传模块：不需要采集模块触发的事件
*
* @par      修改日志：
* <table>
* <tr><th>date              <th>version             <th>author
* <tr><th>2023.7.24          <th>1.0                 <th>huangchuan
* <table>
**********************************************************************************
*/

syntax="proto3";
package	AdrTrigger;

/**
* @brief FileList
* @detail FileList
*/
message FileList
{
	///< 文件大小：[/],(0,0,/),[/],(1,0),文件大小
	uint32 file_size = 1;
	///< 文件名: [/],(/,/,/),[/],(1,0),文件名
	string file_name = 2;
	///< 文件路径含名称: [/],(/,/,/),[/],(1,0),文件路径含名称
	string file_path = 3;
	///< 文件类型: [/],(/,/,/),[/],(1,0),文件类型
	string file_type = 4;
}

/**
* @brief FileUpload
* @detail FileUpload
*/
message FileUpload{
	///< trigger事件ID: [/],(/,/,/),[/],(1,0),trigger事件ID
    string event_id = 1;
	///< 文件信息: [/],(/,/,/),[/],(1,0),文件信息
	repeated FileList file_list = 2;
}